copy edit on maintenance mode

--- a/templates/whitechapel_pages/index.html
+++ b/templates/whitechapel_pages/index.html
@@ -75,7 +75,7 @@
 			<!-- Front Page Text -->
 			<div class="front-page-about">
 				<h1 class="front-page-heading">Website Maintenance</h1>
-				<p class="lead"><strong>Due to essential work at UCL, this site will be in 'maintenance mode' between the 15th and 18th December. The site may be unavailable between these dates,and you won't be able to make any submissions. If you have something you'd like to contribute, please email the editors with your submission.</strong></p>
+				<p class="lead"><strong>Due to essential work at UCL, this site will be in 'maintenance mode' between the 15th and 18th December. The site may be unavailable between these dates,and you won't be able to make any submissions. If you have something you'd like to contribute, please email the editors at solwhitechapel.bartlett@ucl.ac.uk with your submission.</strong></p>
 				<h1 class="front-page-heading">{{ page.title }}</h1>
 				{{ page.body|safe }}
 			</div>
