--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -214,7 +214,7 @@
 		<script>
 
 		$(document).ready(function(){
-			$('.carousel').slick({
+			$('.mini').slick({
 				autoplay: true,
 				autoplaySpeed: 8000,
 				arrows: false,
