modified wording, changed query

--- a/templates/whitechapel_pages/index.html
+++ b/templates/whitechapel_pages/index.html
@@ -105,7 +105,7 @@
 				</div>
 			</div>
 			<br />
-			<p>There are many buildings in Whitechapel that we don't know anything about. If you know something, you can <a href="/accounts/login/">make an account</a> or use the form below to tell us.</p>
+			<p>There are many buildings in Whitechapel about which we would welcome more information. If you know something, you can <a href="/accounts/login/">make an account</a> or use the form below to tell us.</p>
 			<!-- Quick contribution -->
 			<!-- <h2 class="front-page-heading">Quick Contribution</h2> -->
 			<hr />
