--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -547,6 +547,7 @@ p.results-preview {
 
 .carousel-caption a {
 	color: white;
+	text-shadow: 0px 1px 2px rgba(0, 0, 0, 10);
 }
 
 .jumbotron.whitechapel_front_page {
