--- a/templates/whitechapel_pages/index.html
+++ b/templates/whitechapel_pages/index.html
@@ -55,7 +55,7 @@
 	</div>
 	<div class="front-page-banner">
 		{% if page.banner_image_1 %}
-		<div style="background-image: url('/media/{{ page.banner_image_1 }}'); background-size: cover; display: block; width: 100%; height: 600px; background-position: center center;'"></div>
+		<div style="background-image: url('/media/{{ header_images|random }}'); background-size: cover; display: block; width: 100%; height: 600px; background-position: center center;'"></div>
 		{% endif %}
 	</div>
 </div>
